[gd_scene load_steps=10 format=2]

[ext_resource path="res://player_assets/cat_player.png" type="Texture" id=1]
[ext_resource path="res://player.gd" type="Script" id=2]
[ext_resource path="res://outline.tres" type="Material" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.5, 5.5 )

[sub_resource type="Animation" id=2]
resource_name = "fall"
length = 0.332
loop = true
step = 0.083
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.083, 0.166, 0.249 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
loop = true
step = 0.167
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.167, 0.334, 0.501, 0.668, 0.835 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=4]
resource_name = "jump"
length = 0.3
step = 0.042
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.126, 0.21 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8 ]
}

[sub_resource type="Animation" id=5]
resource_name = "run"
length = 0.42
loop = true
step = 0.042
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.084, 0.168, 0.21, 0.294, 0.378 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 16, 17, 18 ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 6, 5.5 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 3 )
position = Vector2( -14.5, -14 )
texture = ExtResource( 1 )
centered = false
hframes = 19
frame = 9

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2( 0, -5.5 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fall = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/jump = SubResource( 4 )
anims/run = SubResource( 5 )

[node name="jumpBuffer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Interact" type="Area2D" parent="."]
position = Vector2( 0, -5.5 )
rotation = 6.28319
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interact"]
position = Vector2( 12.5, 0 )
shape = SubResource( 6 )
disabled = true

[node name="visibilityIndicator" type="Polygon2D" parent="Interact/CollisionShape2D"]
visible = false
polygon = PoolVector2Array( -3.5, -3.5, -3.5, 3.5, 3.5, 3.5, 3.5, -3.5 )

[connection signal="area_entered" from="Interact" to="." method="_on_Interact_area_entered"]
